--- a/wedding-invite/public/manifest.json
+++ b/wedding-invite/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Wedding Invite",
+  "name": "Mar & Newk's Wedding Invitation",
   "icons": [
     {
       "src": "favicon.ico",
