--- a/wedding-invite/package.json
+++ b/wedding-invite/package.json
@@ -2,7 +2,7 @@
   "name": "wedding-invite",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://purple-giraffey.github.io/purple-giraffey.github.io",
+  "homepage": "https://purple-giraffey.github.io/wedding-invite",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
